--- a/docs/parts/vanco2-2.2
+++ b/docs/parts/vanco2-2.2
@@ -1,1 +1,17 @@
+version in progress
+2.1
+The system will operate for two main purposes which include a workshop and a café. Members of the labCafe community utilize a membership card that provides access to both areas. The membership card acts as an authentication method for various services such as entering the workshop, using labCafe tools and equipment (e.g. 3D printers), and applying membership benefits in the form of discounts in the café. It ensures that members can easily verify their identity and gain access without manual intervention. 
 
+The entire system is centrally controled with backend processes and server-client communication managing access rights and usage tracking. While the current system is functional in a prototype form, further optimizations are required to enhance performance, particularly in access speed and control logic.
+
+2.2 System Functionality
+The system provides several core functionalities:
+
+Access control for workshop
+...
+
+Equipment users control
+...
+
+Cafe discounts
+...
